# ai-for-panchayats

./: .gitignore  AGENTS.md  Makefile  README.md  config.py  config.yaml  config_loader.py  dvc.yaml  main.py  pyproject.toml
.dvc/: config
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: data-check.yml  lint.yml  pipeline.yml
.opencode/skills/dpic-deck/: SKILL.md
.opencode/skills/dpic-deck/references/: layouts.md
.opencode/skills/dpic-deck/scripts/: build.js
data/raw/: SabhaSaar_MoMs.dvc  e_panchayat_sabha_data_formats.dvc  meri_panchayat.dvc
notebooks/vivek/: SabhasaarWebscraping.ipynb
scripts/: action_plans.py  activity_summary.py  beneficiaries.py  main_meri_panchayat.py  panchayat_funds.py  panchayat_payment_register.py  run_panchayat_nirnay.py  run_sabhasaar.py  setup.sh  village_population.py  work_activities.py
src/ingest/Panchayat_Nirnay/: api.py  config.py  extractor.py  utils.py
src/ingest/meri_panchayat/: README.md  action_plans.py  activity_summary.py  base_scraper.py  beneficiaries.py  config.py  config.yaml  panchayat_funds.py  panchayat_payment_register.py  village_population.py  work_activities.py
src/ingest/sabhasaar/: api.py  config.py  extractor.py  utils.py
