[project]
name = "ai-for-panchayats"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dpic",
    "dvc[s3]>=3.67.1",
    "indic-transliteration>=2.3.82",
    "loguru>=0.7.3",
    "pandas>=3.0.3",
    "pandera>=0.31.1",
    "polars>=1.41.2",
    "pyarrow>=24.0.0",
    "requests>=2.34.2",
]

[tool.uv.sources]
dpic = { git = "ssh://git@github.com/Data-Policy-and-Innovation-Centre/dpic-org.git", rev = "main" }

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "nbstripout>=0.9.1",
    "pytest>=9.0.3",
    "ruff>=0.15.15",
]
